# ICP_Algorithm

./: .gitignore  CMakeLists.txt  README.md
docs/plans/: 2026-03-23-fricp-dll-design.md  2026-03-23-fricp-dll-implementation.md
examples/: register_example.cpp
include/fricp/: Export.h  FastRobustIcp.h  Types.h
include/fricp/internal/: AndersonAcceleration.h  FastRobustCore.h  TrainedData.h
src/: FastRobustIcp.cpp  vendor_include_probe.cpp
src/internal/: FastRobustCore.cpp  Open3DAdapters.cpp  Open3DAdapters.h  UpstreamParameterMapping.cpp  UpstreamParameterMapping.h
tests/: FastRobustIcpTests.cpp  VerifyMsvcOpenMpProject.cmake  VerifyMsvcUtf8Project.cmake
